--- a/actions.example
+++ b/actions.example
@@ -11,6 +11,9 @@ Duration: {EVENT.AGE}]]>
 	</body>
 	<settings>
 		<graphs>True</graphs>
+		<graphlinks>True</graphlinks>
+		<triggerlinks>True</triggerlinks>
+		<tag>True</tag>
 		<graphs_period>10800</graphs_period>
 		<itemid>{ITEM.ID1}</itemid>
 		<triggerid>{TRIGGER.ID}</triggerid>
@@ -18,7 +21,6 @@ Duration: {EVENT.AGE}]]>
 		<actionid>{ACTION.ID}</actionid>
 		<title><![CDATA[{HOST.HOST} - {EVENT.NAME}]]></title>
         <triggerurl><![CDATA[{TRIGGER.URL}]]></triggerurl>
-        <graphslinks>True</graphslinks>
 		<tags><![CDATA[{EVENT.TAGS}]]></tags>
 	</settings>
 </root>
