--- a/actions.example
+++ b/actions.example
@@ -14,6 +14,7 @@ Duration: {EVENT.AGE}]]>
 		<graphlinks>True</graphlinks>
 		<triggerlinks>True</triggerlinks>
 		<tag>True</tag>
+		<keyboard>True</keyboard>
 		<graphs_period>10800</graphs_period>
 		<itemid>{ITEM.ID1}</itemid>
 		<triggerid>{TRIGGER.ID}</triggerid>
