Рефактор:  - Исправил битые ссылки на график, при прикреплении множества графиков  - Добавил возможность прикреплять линк на хост  - В action.xml добавил hostlinks и hostid  - В конфиг добавлен шаблон урала на хот + emoji

--- a/actions.example
+++ b/actions.example
@@ -11,11 +11,13 @@ Duration: {EVENT.AGE}]]>
 	</body>
 	<settings>
 		<graphs>True</graphs>
+		<hostlinks>True</hostlinks>
 		<graphlinks>True</graphlinks>
 		<triggerlinks>True</triggerlinks>
 		<tag>True</tag>
 		<keyboard>True</keyboard>
 		<graphs_period>10800</graphs_period>
+		<hostid>{HOST.ID1}</hostid>
 		<itemid>{ITEM.ID1}</itemid>
 		<triggerid>{TRIGGER.ID}</triggerid>
 		<eventid>{EVENT.ID}</eventid>
