Рефактор (#19):  - Добавлена общая логика формирования тегов "настройщиков" - ZNTSettings  - Пределана функция формирования тэгов  - Добавлены новые переменные в конфиг файл  - Добавлены новые переменные actions.example  - Добавлена обработка тэга ZNTSettings:not_notify и ZNTSettings:no_graph
 ---

--- a/actions.example
+++ b/actions.example
@@ -22,6 +22,7 @@ Duration: {EVENT.AGE}]]>
 		<triggeridtag>True</triggeridtag>
 		<actionidtag>True</actionidtag>
 		<hostidtag>True</hostidtag>
+		<zntsettingstag>True</zntsettingstag>
 		<keyboard>True</keyboard>
 		<graphs_period>10800</graphs_period>
 		<host>{HOST.ID1}</host>
