Рефактор (#19):  - Добавлена обработка тэга ZNTSettings:period=  - Изменен <graphs_period> actions.example на default(брать значение из конфига)  - Добавлена функция расчета секунд в дни, часы, минуты (участвует в формировании имени графика)  - Мелкие правки по конфигу

--- a/actions.example
+++ b/actions.example
@@ -23,7 +23,7 @@ Duration: {EVENT.AGE}]]>
 		<hostidtag>True</hostidtag>
 		<zntsettingstag>True</zntsettingstag>
 		<keyboard>True</keyboard>
-		<graphs_period>10800</graphs_period>
+		<graphs_period>default</graphs_period>
 		<host>{HOST.ID1}</host>
 		<itemid>{ITEM.ID1} {ITEM.ID2} {ITEM.ID3} {ITEM.ID4}</itemid>
 		<triggerid>{TRIGGER.ID}</triggerid>
