Рефактор:  - Добавил логику формировани упоминаний в чате  - Добавлены настройки trigger_info_mentions_tag, body_messages_mentions, <zntmentions>
 #28

--- a/actions.example
+++ b/actions.example
@@ -22,6 +22,7 @@ Duration: {EVENT.AGE}]]>
 		<actionidtag>True</actionidtag>
 		<hostidtag>True</hostidtag>
 		<zntsettingstag>True</zntsettingstag>
+		<zntmentions>True</zntmentions>
 		<keyboard>True</keyboard>
 		<graphs_period>default</graphs_period>
 		<host>{HOST.HOST}</host>
